--- a/public/templates/index.html
+++ b/public/templates/index.html
@@ -1,18 +1,17 @@
 <div class="main-page-logo">
-
-      <xmp class="main-page-logo__text ubuntu-text">
-        __     _         __                 _  __
-       / /    (_)____   / /__ ____   _____ (_)/ /_ ____   _____ __  __
-      / /    / // __ \ / //_// __ \ / ___// // __// __ \ / ___// / / /
-     / /___ / // / / // /<  / /_/ /(__  )/ // /_ / /_/ // /   / /_/ /
-    /_____//_//_/ /_//_/|_| \____//____//_/ \__/ \____//_/    \__/ /
-                                                             /____/
-     </xmp>
-
+  <div style="text-align:center">
+      <img src="heart.png" alt="Health Assist Logo" width="200px" height="200px">
+      <br />
+      <div class="main-page-logo__text ubuntu-text" style="font-style: italic;font-family: serif;font-size: 42px;">
+         Health Assist
+      </div>
+      <!-- <div style="font-style: italic;font-family: serif;font-size: 16px;">An app that Doctors prefer</div> -->
+  </div>
+      
 </div>
 
 <div class="tagline">
- <span class="linkository-tagline">Dont lose your bookmarks again</span>
+ <span class="linkository-tagline">Don't lose your prescriptions again</span>
 </div>
 
 <div class="controls">
