--- a/public/templates/create_bookmark_form.html
+++ b/public/templates/create_bookmark_form.html
@@ -3,21 +3,21 @@
 </div>
 <br/>
 <div class="form-group" >
-<label class="col-sm-2 control-label">Link</label >
+<label class="col-sm-2 control-label">Medicine</label >
 <div class="col-sm-10" >
 <input type="text" take-focus class="form-control" name="link" ng-model="bookmark.link" required />
 </div>
 </div>
 
 <div class="form-group">
-<label class="col-sm-2 control-label">Description</label >
+<label class="col-sm-2 control-label">Prescription</label >
 <div class="col-sm-10" >
 <input type="text" class="form-control" name="description" ng-model="bookmark.description"  />
 </div>
 </div>
 
 <div class="form-group" >
-<label class="col-sm-2 control-label">Tags</label >
+<label class="col-sm-2 control-label">Patient</label >
 <div class="col-sm-10" >
    <div class="tagContainer">
           <div ng-repeat="tag in bookmark.inputTags" class="bookmarkTag">
@@ -25,10 +25,10 @@
                  <span class="removeTag" ng-click="removeTag(tag);">&times;</span>
           </div>
           <input id="bookmarkTagsInput" class="tag-input-field" type="text" ng-show="showInputTagField"
-           placeholder="Tag your bookmark" ng-model="tagText.input" />
+           placeholder="Search Patient" ng-model="tagText.input" />
    </div>
    <div class="tagNote" >
-   <span class="ubuntu-text">Note : At least one tag, Maximum 8 tags </span>
+   <span class="ubuntu-text">Note : Select a patient </span>
    </div>
 </div>
 
@@ -44,11 +44,11 @@
 
 <div>
 
-<span><a ng-click="showCreateTagModal();">Create a new tag</a></span>
+<span><a ng-click="showCreateTagModal();">Register as a new Patient</a></span>
 <div class="modal-footer">
        <button type="button" class="btn btn-default" ng-click="$hide()">Close</button>
        <button type="button"  ng-click="createBookmark(bookmark);"
-           class="btn btn-primary">Save Bookmark </button >
+           class="btn btn-primary">Save</button >
      </div>
 
 </div>
