--- a/public/templates/create_bookmark_modal.html
+++ b/public/templates/create_bookmark_modal.html
@@ -4,7 +4,7 @@
       <div class="modal-content">
         <div class="modal-header">
            <button class="close" ng-click="bookmarkModal.hide()" type="button">x</button>
-           <h4 class="modal-title">Create Bookmark</h4>
+           <h4 class="modal-title">Create</h4>
         </div>
         <div class="modal-body">
           <form class="form-horizontal">
