--- a/public/templates/create_tag_form.html
+++ b/public/templates/create_tag_form.html
@@ -4,13 +4,13 @@
 </div>
 <br/>
 <div class="form-group" >
-<label class="col-sm-2 control-label">Tag name</label >
+<label class="col-sm-2 control-label">Patient name</label >
 <div class="col-sm-10" >
 
 <input type="text" id="tagInputControl" class="form-control" take-focus ng-model="newTag.name"  /><br/>
 </div >
 <span class="tag-name-warning ubuntu-text">
-  Note : Tag name can only contain alphabets(a-z) and hyphen(-)
+  Note : Patient name can only contain alphabets(a-z) and hyphen(-)
 </span>
 
 </div >
@@ -18,5 +18,5 @@
 <div class="modal-footer">
        <button type="button" class="btn btn-default" ng-click="$hide()">Close</button>
        <button type="button" type="button" ng-click="createTag(newTag);"
-           class="btn btn-primary">Save Tag </button >
+           class="btn btn-primary">Save Patient </button >
 </div>
