--- a/public/templates/create_tag_modal.html
+++ b/public/templates/create_tag_modal.html
@@ -4,7 +4,7 @@
       <div class="modal-content">
         <div class="modal-header">
            <button class="close" ng-click="tagModal.hide()" type="button">x</button>
-           <h4 class="modal-title">Create Tag</h4>
+           <h4 class="modal-title">Create Patient</h4>
         </div>
         <div class="modal-body">
           <form class="form-horizontal">
