--- a/public/templates/edit-bookmark.html
+++ b/public/templates/edit-bookmark.html
@@ -5,7 +5,7 @@
 <div class="col-md-8 col-md-offset-2">
 	<form class="form-horizontal"  novalidate>
 		<div class="panel panel-default edit-panel">
-			<div class="panel-heading">Edit Bookmark</div>
+			<div class="panel-heading">Edit</div>
 
 			   <div class="panel-body" >
 				    <ng-include src="'templates/edit_bookmark_form.html'" ></ng-include >
