--- a/public/templates/nav.tmpl.html
+++ b/public/templates/nav.tmpl.html
@@ -1,6 +1,6 @@
-<nav class="navbar navbar-inverse navbar-fixed-top ubuntu-border">
+<nav class="navbar navbar-inverse navbar-fixed-top ubuntu-border" style="background-color: #F08080;border-color: #F08080;">
 <div class="container">
-  <span class="navbar-brand">Linkository</span>
+  <span class="navbar-brand">Health Assist</span>
   <div ng-controller="LogoutController" class="navbar-header navbar-right" >
     <a style="cursor:pointer" class="navbar-brand "
        ng-click="logout();">Logout
