Pushing all final changes

--- a/public/templates/delete_bookmark_modal.html
+++ b/public/templates/delete_bookmark_modal.html
@@ -10,7 +10,7 @@
           <form class="form-horizontal">
              <span class="ubuntu-text bold-font">Are you sure you want to delete?</span>
              <div class="delete-bookmark">
-             <p><span class="delete-bookmark-heading">Prescription</span><br/>
+             <p><span class="delete-bookmark-heading">Indications</span><br/>
                {{bookmarkToDelete.description}}
              </p>
              <p><span class="delete-bookmark-heading">Medicine</span><br/>
