--- a/public/templates/edit_bookmark_form.html
+++ b/public/templates/edit_bookmark_form.html
@@ -10,7 +10,7 @@
 </div>
 
 <div class="form-group">
-<label class="col-sm-2 control-label">Prescription</label >
+<label class="col-sm-2 control-label">Indications</label >
 <div class="col-sm-10" >
 <input type="text" class="form-control" name="description" ng-model="editBookmark.description"  />
 </div>
