--- a/public/templates/create_tag_form.html
+++ b/public/templates/create_tag_form.html
@@ -4,16 +4,15 @@
 </div>
 <br/>
 <div class="form-group" >
-<label class="col-sm-2 control-label">Patient name</label >
-<div class="col-sm-10" >
+<label class="col-sm-3 control-label">Patient Name - ID</label >
+<div class="col-sm-9" >
 
-<input type="text" id="tagInputControl" class="form-control" take-focus ng-model="newTag.name"  /><br/>
-</div >
-<span class="tag-name-warning ubuntu-text">
-  Note : Patient name can only contain alphabets(a-z) and hyphen(-)
-</span>
-
-</div >
+<input type="text" id="tagInputControl" class="form-control" take-focus ng-model="newTag.name" placeholder="Enter Name - ID Ex. XYZ-ID" /><br/>
+</div>
+	<span class="tag-name-warning ubuntu-text" style="margin-left: 4%;">
+	  Note : Patient name can only contain alphabets(a-z), numbers(0-9) and hyphen(-)
+	</span>
+</div>
 
 <div class="modal-footer">
        <button type="button" class="btn btn-default" ng-click="$hide()">Close</button>
