--- a/public/templates/list.html
+++ b/public/templates/list.html
@@ -33,7 +33,7 @@
            <tr class="active " ng-repeat="bm in bookmarks | filter:searchBookmarks | orderBy:sortOrder.order">
              <td>{{bm.description}}</td>
              <td>{{bm.link}}</td>
-             <td>{{bm.tags}}</td>
+             <td class="patient">{{bm.tags}}</td>
              <td>{{bm.created_at | date:"dd-MM-yyyy' ,' hh:mm:ss a"}} </td>
              <td>
                <span ui-sref="edit({id:bm._id})" class="icon-edit edit-action"></span>
