--- a/public/templates/list.html
+++ b/public/templates/list.html
@@ -37,6 +37,7 @@
              <td>{{bm.created_at | date:"dd-MM-yyyy' ,' hh:mm:ss a"}} </td>
              <td>
                <span ui-sref="edit({id:bm._id})" class="icon-edit edit-action"></span>
+               <span ui-sref="email({id:bm._id})" class="glyphicon glyphicon-envelope" style="left: 10%;"></span>
                <span ng-click="showDeleteBookmarkModal(bm)" class="icon-trash delete-action"></span>
              </td>
            </tr>
